si hice mi tarea

--- a/html/forms.html
+++ b/html/forms.html
@@ -23,6 +23,40 @@
 <input type="tel" placeholder="numero telefonico">
 <br>
 <input type="range" placeholder="rango">
+<br>
+<form>
+    Nombre:<br>
+    <input type="text" name="Nombre"><br>
+    Apellido:<br>
+    <input type="text" name="Apellido">
+  </form>
+  <br>
+<input type="week" placeholder="semana">
+<br>
+<input type="url" placeholder="link">
+<br>
+<input type="time" placeholder="tiempo">
+<br>
+<input type="submit" placeholder="ingresa texto">
+<br>
+<input type="search" placeholder="buscar">
+<br>
+<input type="reset" placeholder="resetear">
+<br>
+<input type="number" placeholder="numero">
+<br>
+<input type="month" placeholder="mes">
+<br>
+<input type="hidden" placeholder="hidden">
+<br>
+<input type="datetime-local" placeholder="hora local">
+<br>
+<input type="checkbox" placeholder="selecciona">
+<br>
+<input type="button" placeholder="boton">
+
+
+
 
 <br>
         <form>
