--- a/html/index.html
+++ b/html/index.html
@@ -67,15 +67,17 @@
          <li>elemento</li>
          <li>elemento</li>
          <li>elemento</li>
-         <li>elemento</li>
      </ol>
 
      <!--clase, boton-->
 
     <button>Este es un button</button>
+    <button>Este es un button</button>
+    <button>Este es un button</button>
 
      <!--clase, pie de pagina-->
     <footer>Este es el pie de pagina</footer>
+    <button>Este es un button</button>
 </main>
 </body>
 </html>
